--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -38,3 +38,28 @@ button:hover{
     background-color:#002b49;
     border-color:#002b49;
 }
+.icon{
+    color:#002B49;
+    font-size: 10px;
+    background-color: white;
+    border-color: white;
+    width: 10px;
+    background:transparent;
+    border:0px;
+    height:5px;
+    margin: 0;
+    padding:0;
+    padding-left: 5px;
+}
+.icon:hover{
+    color:#002B49;
+    font-size: 10px;
+    border-color: white;
+    width: 10px;
+    background:transparent;
+    border:0px;
+    height:5px;
+    margin: 0;
+    padding:0;
+    padding-left: 5px;
+}
