updated style header

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,8 +11,8 @@
     font-weight: bold;
     list-style-type: none;
     font-size: 175%;
-    
-    margin-right: 2%;
+    margin-right: 10px;
+    margin-top: 15px;
     float: right;
 }
 nav{
